fix: fix word break in cover letter

--- a/src/components/CardIncome/CardIncome.scss
+++ b/src/components/CardIncome/CardIncome.scss
@@ -2,10 +2,13 @@
 .card-income {
 	display: grid;
 	grid-template-columns: 6fr 7fr;
-	grid-template-rows: auto 48px auto auto;
-
+	grid-template-rows: auto 48px auto auto;	
 	&__title {
 		margin: 10px 0 0;
+	}
+	&__letter{
+		max-width: 100%;		
+		word-break: break-all;
 	}
 	&__button {
 		height: 48px;
